работа как в примерах